--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   bottom_navy_bar: ^6.0.0
+  wakelock: ^0.5.6
+  flutter_map: ^0.13.1
+  latlong: ^0.6.1
+  latlong2: ^0.8.1
+  geolocator: ^7.7.1
+  get: ^4.3.8
 
 dev_dependencies:
   flutter_test:
