--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   flutter_map: ^0.13.1
   latlong: ^0.6.1
   latlong2: ^0.8.1
-  geolocator: ^7.7.1
+#  geolocator: ^7.7.1
   get: ^4.3.8
+  geolocator: ^8.0.1
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +66,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/bottom1.png
+    - assets/images/bottom2.png
+    - assets/images/main.png
+    - assets/images/top1.png
+    - assets/images/top2.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
