--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.proiect_dac">
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    package="com.simi.proiect_dac">
    <application
         android:label="proiect_dac"
         android:icon="@mipmap/ic_launcher">
+
+<!--       <meta-data android:name="com.google.android.geo.API_KEY"-->
+<!--           android:values="AIzaSyA5nQkXBljiXQzX-9ZXbzHWOhYU1gydFa4"/>-->
+
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
