--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  bottom_navy_bar: ^6.0.0
-  wakelock: ^0.5.6
-  flutter_map: ^0.13.1
-  latlong: ^0.6.1
+  flutter_map: ^0.14.0
   latlong2: ^0.8.1
-#  geolocator: ^7.7.1
-  get: ^4.3.8
-  geolocator: ^8.0.1
+  bottom_navy_bar: ^6.0.0
+  flutter_map_marker_popup: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -66,13 +62,15 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/bottom1.png
-    - assets/images/bottom2.png
-    - assets/images/main.png
-    - assets/images/top1.png
-    - assets/images/top2.png
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+      - assets/images/bottom1.png
+      - assets/images/bottom2.png
+      - assets/images/main.png
+      - assets/images/top1.png
+      - assets/images/top2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
